--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "poplar_auto_cli",
   "version": "1.0.0",
   "description": "vue react cli",
+  "bin": {
+    "poplar_auto_cli": "bin/cli.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "commander": "^9.1.0",
+    "download-git-repo": "^3.0.2",
+    "inquirer": "^8.1.2",
+    "ora": "^5.4.1"
+  }
 }
